Project Grammar/2 Deklarasi dan Inisialisai Variabel/inisialisasiParser.java
// Generated from inisialisasi.g4 by ANTLR 4.5.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class inisialisasiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, Identifier=73, 
		INT=74, CHAR=75, UNSG=76, FLOAT=77, DOUBLE=78, Whitespace=79, Newline=80, 
		BlockComment=81, LineComment=82;
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_pointer = 2, RULE_array = 3, RULE_struct = 4, 
		RULE_operator = 5, RULE_bitwise = 6, RULE_assignment = 7, RULE_indec = 8, 
		RULE_comparator = 9, RULE_matem = 10, RULE_aritmatich = 11, RULE_ternary = 12, 
		RULE_dec = 13, RULE_type_int = 14, RULE_init_struct = 15, RULE_size = 16, 
		RULE_init_array1 = 17, RULE_init_array2 = 18, RULE_init_array3 = 19, RULE_init_array4 = 20, 
		RULE_value1 = 21, RULE_value2 = 22, RULE_value3 = 23, RULE_value4 = 24, 
		RULE_type_CHAR = 25, RULE_type_FLOAT = 26, RULE_type_DOUBLE = 27, RULE_type_INT = 28, 
		RULE_init_pointer1 = 29, RULE_init_pointer2 = 30, RULE_deklarasi = 31, 
		RULE_typedata = 32, RULE_type_data = 33, RULE_integer_s = 34, RULE_integer_v = 35, 
		RULE_char_s = 36, RULE_char_v = 37, RULE_float_s = 38, RULE_float_v = 39, 
		RULE_double_s = 40, RULE_double_v = 41, RULE_boolean_s = 42, RULE_boolean_v = 43, 
		RULE_switchcase = 44, RULE_init_switchcase = 45, RULE_swstatement = 46, 
		RULE_swcase = 47, RULE_swdefault = 48, RULE_statcase = 49, RULE_jumpstat = 50, 
		RULE_bool = 51, RULE_while_statement = 52, RULE_init_while = 53, RULE_relationalExpression = 54, 
		RULE_unaryExpression = 55, RULE_assignmentOperator = 56, RULE_logic = 57, 
		RULE_iterationStatement = 58, RULE_init_for = 59, RULE_condition = 60, 
		RULE_state = 61, RULE_jumpStatement = 62;
	public static final String[] ruleNames = {
		"prog", "statement", "pointer", "array", "struct", "operator", "bitwise", 
		"assignment", "indec", "comparator", "matem", "aritmatich", "ternary", 
		"dec", "type_int", "init_struct", "size", "init_array1", "init_array2", 
		"init_array3", "init_array4", "value1", "value2", "value3", "value4", 
		"type_CHAR", "type_FLOAT", "type_DOUBLE", "type_INT", "init_pointer1", 
		"init_pointer2", "deklarasi", "typedata", "type_data", "integer_s", "integer_v", 
		"char_s", "char_v", "float_s", "float_v", "double_s", "double_v", "boolean_s", 
		"boolean_v", "switchcase", "init_switchcase", "swstatement", "swcase", 
		"swdefault", "statcase", "jumpstat", "bool", "while_statement", "init_while", 
		"relationalExpression", "unaryExpression", "assignmentOperator", "logic", 
		"iterationStatement", "init_for", "condition", "state", "jumpStatement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'const'", "'='", "'unsigned'", "'struct'", "'{'", "'}'", 
		"','", "'.'", "'&'", "'|'", "'^'", "'<<'", "'>>'", "'~'", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'++'", "'--'", "'+1'", "'-1'", "'=='", "'!='", "'>'", 
		"'<'", "'>='", "'<='", "'||'", "'&&'", "'!'", "'('", "')'", "'?'", "':'", 
		"'short'", "'int'", "'long'", "'['", "']'", "'char'", "'float'", "'double'", 
		"'boolean'", "'\"'", "'''", "'TRUE'", "'FALSE'", "'true'", "'false'", 
		"'switch'", "'case'", "'default'", "'break'", "'continue'", "'goto'", 
		"'0'", "'1'", "'while'", "'do'", "'*='", "'/='", "'%='", "'+='", "'-='", 
		"'<<='", "'>>='", "'&='", "'^='", "'for'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "Identifier", "INT", "CHAR", "UNSG", "FLOAT", "DOUBLE", "Whitespace", 
		"Newline", "BlockComment", "LineComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "inisialisasi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public inisialisasiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof inisialisasiListener ) ((inisialisasiListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof inisialisasiListener ) ((inisialisasiListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(126);
				statement();
				}
				}
				setState(129); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__4) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__32) | (1L << T__33) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45))) != 0) || ((((_la - 73)) & ~0x3f) == 0 && ((1L << (_la - 73)) & ((1L << (Identifier - 73)) | (1L << (INT - 73)) | (1L << (FLOAT - 73)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public DeklarasiContext deklarasi() {
			return getRuleContext(DeklarasiContext.class,0);
		}
		public PointerContext pointer() {
			return getRuleContext(PointerContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public StructContext struct() {
			return getRuleContext(StructContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof inisialisasiListener ) ((inisialisasiListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof inisialisasiListener ) ((inisialisasiListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				operator();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				deklarasi();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(133);
				pointer();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				array();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(135);
				struct();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PointerContext extends ParserRuleContext {
		public List<Type_dataContext> type_data() {
			return getRuleContexts(Type_dataContext.class);
		}
		public Type_dataContext type_data(int i) {
			return getRuleContext(Type_dataContext.class,i);
		}
		public List<Init_pointer1Context> init_pointer1() {
			return getRuleContexts(Init_pointer1Context.class);
		}
		public Init_pointer1Context init_pointer1(int i) {
			return getRuleContext(Init_pointer1Context.class,i);
		}
		public List<Init_pointer2Context> init_pointer2() {
			return getRuleContexts(Init_pointer2Context.class);
		}
		public Init_pointer2Context init_pointer2(int i) {
			return getRuleContext(Init_pointer2Context.class,i);
		}
		public PointerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pointer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof inisialisasiListener ) ((inisialisasiListener)listener).enterPointer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof inisialisasiListener ) ((inisialisasiListener)listener).exitPointer(this);
		}
	}

	public final PointerContext pointer() throws RecognitionException {
		PointerContext _localctx = new PointerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pointer);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(150); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(150);
					switch (_input.LA(1)) {
					case T__38:
					case T__42:
					case T__43:
					case T__44:
					case T__45:
						{
						{
						setState(138);
						type_data();
						setState(139);
						init_pointer1();
						setState(140);
						match(T__0);
						}
						}
						break;
					case Identifier:
						{
						{
						setState(142);
						init_pointer2();
						setState(143);
						match(T__0);
						}
						}
						break;
					case T__1:
						{
						{
						setState(145);
						match(T__1);
						setState(146);
						type_data();
						setState(147);
						init_pointer2();
						setState(148);
						match(T__0);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(152); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public Type_INTContext type_INT() {
			return getRuleContext(Type_INTContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(inisialisasiParser.Identifier, 0); }
		public List<SizeContext> size() {
			return getRuleContexts(SizeContext.class);
		}
		public SizeContext size(int i) {
			return getRuleContext(SizeContext.class,i);
		}
		public Init_array1Context init_array1() {
			return getRuleContext(Init_array1Context.class,0);
		}
		public Init_array4Context init_array4() {
			return getRuleContext(Init_array4Context.class,0);
		}
		public Type_CHARContext type_CHAR() {
			return getRuleContext(Type_CHARContext.class,0);
		}
		public Init_array2Context init_array2() {
			return getRuleContext(Init_array2Context.class,0);
		}
		public Type_FLOATContext type_FLOAT() {
			return getRuleContext(Type_FLOATContext.class,0);
		}
		public Type_DOUBLEContext type_DOUBLE() {
			return getRuleContext(Type_DOUBLEContext.class,0);
		}
		public Init_array3Context init_array3() {
			return getRuleContext(Init_array3Context.class,0);
		}
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof inisialisasiListener ) ((inisialisasiListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof inisialisasiListener ) ((inisialisasiListener)listener).exitArray(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_array);
		int _la;
		try {
			setState(209);
			switch (_input.LA(1)) {
			case T__38:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(154);
				type_INT();
				setState(155);
				match(Identifier);
				setState(157); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(156);
					size();
					}
					}
					setState(159); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__40 );
				setState(163);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(161);
					match(T__2);
					setState(162);
					init_array1();
					}
				}

				setState(165);
				match(T__0);
				}
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(167);
				match(T__3);
				setState(168);
				match(Identifier);
				setState(170); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(169);
					size();
					}
					}
					setState(172); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__40 );
				setState(176);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(174);
					match(T__2);
					setState(175);
					init_array4();
					}
				}

				setState(178);
				match(T__0);
				}
				}
				break;
			case T__42:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(180);
				type_CHAR();
				setState(181);
				match(Identifier);
				setState(183); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(182);
					size();
					}
					}
					setState(185); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__40 );
				setState(189);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(187);
					match(T__2);
					setState(188);
					init_array2();
					}
				}

				setState(191);
				match(T__0);
				}
				}
				break;
			case T__43:
			case T__44:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(195);
				switch (_input.LA(1)) {
				case T__43:
					{
					setState(193);
					type_FLOAT();
					}
					break;
				case T__44:
					{
					setState(194);
					type_DOUBLE();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(197);
				match(Identifier);
				setState(199); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(198);
					size();
					}
					}
					setState(201); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__40 );
				setState(205);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(203);
					match(T__2);
					setState(204);
					init_array3();
					}
				}

				setState(207);
				match(T__0);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(inisialisasiParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(inisialisasiParser.Identifier, i);
		}
		public List<DecContext> dec() {
			return getRuleContexts(DecContext.class);
		}
		public DecContext dec(int i) {
			return getRuleContext(DecContext.class,i);
		}
		public Init_structContext init_struct() {
			return getRuleContext(Init_structContext.class,0);
		}
		public StructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof inisialisasiListener ) ((inisialisasiListener)listener).enterStruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof inisialisasiListener ) ((inisialisasiListener)listener).exitStruct(this);
		}
	}

	public final StructContext struct() throws RecognitionException {
		StructContext _localctx = new StructContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_struct);
		int _la;
		try {
			int _alt;
			setState(247);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(221); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(211);
						match(T__4);
						setState(212);
						match(Identifier);
						setState(213);
						match(T__5);
						setState(215); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(214);
							dec();
							}
							}
							setState(217); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45))) != 0) );
						setState(219);
						match(T__6);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(223); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(236); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(225);
						match(T__4);
						setState(226);
						match(Identifier);
						setState(227);
						match(Identifier);
						setState(232);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==T__7) {
							{
							{
							setState(228);
							match(T__7);
							setState(229);
							match(Identifier);
							}
							}
							setState(234);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(235);
						match(T__0);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(238); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(240);
				match(Identifier);
				setState(241);
				match(T__8);
				setState(242);
				match(Identifier);
				setState(243);
				match(T__2);
				setState(244);
				init_struct();
				setState(245);
				match(T__0);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorContext extends ParserRuleContext {
		public AritmatichContext aritmatich() {
			return getRuleContext(AritmatichContext.class,0);
		}
		public List<MatemContext> matem() {
			return getRuleContexts(MatemContext.class);
		}
		public MatemContext matem(int i) {
			return getRuleContext(MatemContext.class,i);
		}
		public Type_dataContext type_data() {
			return getRuleContext(Type_dataContext.class,0);
		}
		public List<TerminalNode> Identifier() { return getTokens(inisialisasiParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(inisialisasiParser.Identifier, i);
		}
		public IndecContext indec() {
			return getRuleContext(IndecContext.class,0);
		}
		public TernaryContext ternary() {
			return getRuleContext(TernaryContext.class,0);
		}
		public BitwiseContext bitwise() {
			return getRuleContext(BitwiseContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ComparatorContext comparator() {
			return getRuleContext(ComparatorContext.class,0);
		}
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof inisialisasiListener ) ((inisialisasiListener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof inisialisasiListener ) ((inisialisasiListener)listener).exitOperator(this);
		}
	}
